# ipgate

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.github/workflows/: build.yml  ipecho-docker.yml  release.yml
agent/: Cargo.toml  README.md
agent/deploy/: build-release.sh  config.example.json  install.sh  ipgate-agent.service  uninstall.sh
agent/src/: config.rs  e2e.rs  forward.rs  main.rs  netinfo.rs  noise.rs  reconcile.rs  resolve.rs  sshd.rs  store.rs  tls.rs  util.rs
agent/src/api/: error.rs  handlers.rs  limit.rs  mod.rs
agent/src/auth/: access.rs  challenge.rs  keys.rs  mod.rs  pairing.rs  token.rs
agent/src/dnat/: conf.rs  lock.rs  mod.rs
agent/src/nft/: cli.rs  mod.rs  nat.rs  parse.rs  ruleset.rs
client/: README.md
docs/adr/: 0001-architecture.md  0002-nftables-backend.md  0003-transport-auth.md  0004-deployment.md  0005-port-forwarding.md  0006-dnat-adapter-drain.md  0007-noise-over-ssh.md
ipecho/: Dockerfile  README.md  go.mod  main.go
proto/: Cargo.toml  README.md
proto/src/: auth.rs  crypto.rs  entry.rs  error.rs  forward.rs  ids.rs  lib.rs  rpc.rs  ruleset.rs
