[package]
name = "ipgate-agent"
version = "0.1.11"
edition = "2021"
publish = false
description = "ipgate agent —— 运行在远程 Linux 主机上，落地 nftables 放行名单（ADR 0002）。"

[[bin]]
name = "ipgate-agent"
path = "src/main.rs"

[dependencies]
ipgate-proto = { path = "../proto" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ipnet = { version = "2", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "time", "signal", "sync"] }
axum = "0.8.9"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
rcgen = "0.14.8"
ed25519-dalek = "2.2.0"
base64 = "0.22.1"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.4.3"
uuid = "1.23.3"
# flock(2)：与 dnat 工具的 conf.lock 跨进程互斥（ADR 0006）。
libc = "0.2"
# 配对二维码（`pair --qr`）：纯 Rust 渲染终端 Unicode 二维码，不拉 image/svg。
qrcode = { version = "0.14", default-features = false }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
