[package]
name = "ipgate-proto"
version = "0.1.0"
edition = "2021"
publish = false
description = "ipgate 客户端与 agent 共享的协议类型（单一可信源）。见 ../docs/adr/0001..0003。"

[dependencies]
serde = { version = "1", features = ["derive"] }
ipnet = { version = "2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
# RpcResponse::Ok 承载任意 op 的成功负载（按 op 反序列化）；线协议依赖（ADR 0007）。
serde_json = "1"
